<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_back" android:title="@string/back" app:showAsAction="never" />
    <item android:id="@+id/action_forward" android:title="@string/forward" app:showAsAction="never" />
    <item android:id="@+id/action_reload" android:icon="@drawable/ic_refresh_24dp" android:title="@string/reload" app:showAsAction="ifRoom" />
    <item android:id="@+id/action_share" android:icon="@drawable/ic_share_24dp" android:title="@string/share" app:showAsAction="never" />
    <item android:id="@+id/action_desktop_site" android:checkable="true" android:title="@string/desktop_site" app:showAsAction="never" />
    <item android:id="@+id/action_downloads" android:title="@string/downloads" app:showAsAction="never" />
    <item android:id="@+id/action_export_backup" android:title="@string/export_backup" app:showAsAction="never" />
    <item android:id="@+id/action_import_backup" android:title="@string/import_backup" app:showAsAction="never" />
    <item android:id="@+id/action_firefox_sync" android:title="@string/firefox_sync" app:showAsAction="never" />
    <item android:id="@+id/action_clear_private_data" android:icon="@drawable/ic_clear_private_data_24dp" android:title="@string/clear_private_data" app:showAsAction="never" />
    <item android:id="@+id/action_app_settings" android:title="@string/app_settings" app:showAsAction="never" />
</menu>
